# avogadro-pymatgen

./: README.md  pyproject.toml
src/avogadro_pymatgen/: __init__.py  slab-options.json  slab.py
